# real-state-scraping

./: README.md  pyproject.toml
scraping/scraping/: settings.py
scraping/scraping/spiders/: bh_spider.py  pa_spider.py  rj_spider.py  sp_spider.py
